Imgs and Icons for Home

--- a/assets/css/basic.css
+++ b/assets/css/basic.css
@@ -312,6 +312,7 @@ footer>.footer-content {
     line-height: 20px;
     transition:all ease 1s;
     position: relative;
+    width:120px;
 }
 
 #secondarynav>ul>li>a:after {
